examples/configuration-aws-network/observed-resources/route.ec2.aws.upbound.io-configuration-aws-network-l8pmm.yaml
apiVersion: ec2.aws.upbound.io/v1beta2
kind: Route
metadata:
  annotations:
    crossplane.io/composition-resource-name: route
    crossplane.io/external-create-pending: "2024-09-26T15:53:05Z"
    crossplane.io/external-create-succeeded: "2024-09-26T15:53:05Z"
    crossplane.io/external-name: r-rtb-0b071e65c073358181080289494
  creationTimestamp: "2024-09-26T15:49:00Z"
  finalizers:
  - finalizer.managedresource.crossplane.io
  generateName: configuration-aws-network-
  generation: 2
  labels:
    crossplane.io/claim-name: ""
    crossplane.io/claim-namespace: ""
    crossplane.io/composite: configuration-aws-network
    networks.aws.platform.upbound.io/network-id: configuration-aws-network
  name: configuration-aws-network-l8pmm
  ownerReferences:
  - apiVersion: aws.platform.upbound.io/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: XNetwork
    name: configuration-aws-network
    uid: 26d63562-ba4c-4c4e-bd9c-e8c90f98c797
  resourceVersion: "751294"
  uid: e043b60b-a942-414a-b2b8-b9daeda34237
spec:
  deletionPolicy: Delete
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    gatewayId: igw-0985d4f86736dcbdc
    gatewayIdRef:
      name: configuration-aws-network-49bfx
    gatewayIdSelector:
      matchControllerRef: true
    region: us-west-2
    routeTableId: rtb-0b071e65c07335818
    routeTableIdRef:
      name: configuration-aws-network-tzdwz
    routeTableIdSelector:
      matchControllerRef: true
  initProvider: {}
  managementPolicies:
  - '*'
  providerConfigRef:
    name: default
# status:
#   atProvider:
#     carrierGatewayId: ""
#     coreNetworkArn: ""
#     destinationCidrBlock: 0.0.0.0/0
#     destinationIpv6CidrBlock: ""
#     destinationPrefixListId: ""
#     egressOnlyGatewayId: ""
#     gatewayId: igw-0985d4f86736dcbdc
#     id: r-rtb-0b071e65c073358181080289494
#     instanceId: ""
#     instanceOwnerId: ""
#     localGatewayId: ""
#     natGatewayId: ""
#     networkInterfaceId: ""
#     origin: CreateRoute
#     routeTableId: rtb-0b071e65c07335818
#     state: active
#     transitGatewayId: ""
#     vpcEndpointId: ""
#     vpcPeeringConnectionId: ""
#   conditions:
#   - lastTransitionTime: "2024-09-26T15:53:05Z"
#     reason: ReconcileSuccess
#     status: "True"
#     type: Synced
#   - lastTransitionTime: "2024-09-26T15:53:09Z"
#     reason: Available
#     status: "True"
#     type: Ready
#   - lastTransitionTime: "2024-09-26T15:53:07Z"
#     reason: Success
#     status: "True"
#     type: LastAsyncOperation
